--- a/Architecture/Architecture.csproj
+++ b/Architecture/Architecture.csproj
@@ -29,5 +29,8 @@
     <None Include="..\README.md" Pack="true" PackagePath="\" />
     <None Include="..\icon.png" Pack="true" PackagePath="\" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="NetArchTest.Rules" Version="1.3.2" />
+  </ItemGroup>
 
 </Project>
