--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -6,7 +6,7 @@
     <Authors>Joakim Sigvald</Authors>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>disable</Nullable>
+    <Nullable>enable</Nullable>
     <AssemblyName>XspecT</AssemblyName>
     <RootNamespace>XspecT</RootNamespace>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
