--- a/Assert.Test/Assert.Test.csproj
+++ b/Assert.Test/Assert.Test.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>disable</Nullable>
+    <Nullable>enable</Nullable>
     <AssemblyName>XspecT.Assert.Test</AssemblyName>
     <RootNamespace>XspecT.Assert.Test</RootNamespace>
   </PropertyGroup>
