--- a/Assert/Assert.csproj
+++ b/Assert/Assert.csproj
@@ -6,7 +6,7 @@
     <Authors>Joakim Sigvald</Authors>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>disable</Nullable>
+    <Nullable>enable</Nullable>
     <AssemblyName>XspecT.Assert</AssemblyName>
     <RootNamespace>XspecT.Assert</RootNamespace>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
