--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -18,11 +18,11 @@
     <PackageProjectUrl>https://github.com/joakimsigvald/XspecT</PackageProjectUrl>
     <RepositoryUrl>https://github.com/joakimsigvald/XspecT.git</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
-    <PackageVersion>14.2.1</PackageVersion>
+    <PackageVersion>15.0.0</PackageVersion>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageIcon>icon.png</PackageIcon>
-    <PackageReleaseNotes>Updated packages</PackageReleaseNotes>
+    <PackageReleaseNotes>Merged SubjectSpec and StaticSpec to a single base class Spec, with one or two generic parameters depending on if either SUT or Return value is needed or not</PackageReleaseNotes>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
   <ItemGroup>
