--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -6,7 +6,6 @@
     <Authors>Joakim Sigvald</Authors>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
     <AssemblyName>XspecT</AssemblyName>
     <RootNamespace>XspecT</RootNamespace>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
@@ -18,11 +17,11 @@
     <PackageProjectUrl>https://github.com/joakimsigvald/XspecT</PackageProjectUrl>
     <RepositoryUrl>https://github.com/joakimsigvald/XspecT.git</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
-    <PackageVersion>15.0.0</PackageVersion>
+    <PackageVersion>15.0.1</PackageVersion>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageIcon>icon.png</PackageIcon>
-    <PackageReleaseNotes>Merged SubjectSpec and StaticSpec to a single base class Spec, with one or two generic parameters depending on if either SUT or Return value is needed or not</PackageReleaseNotes>
+    <PackageReleaseNotes>Fixed setup when subject is string</PackageReleaseNotes>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
   <ItemGroup>
