Renamed ReturnsDefault(value) to Returns and apply both value and Task of value as default returns for the mock

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -17,11 +17,11 @@
     <PackageProjectUrl>https://github.com/joakimsigvald/XspecT</PackageProjectUrl>
     <RepositoryUrl>https://github.com/joakimsigvald/XspecT.git</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
-    <PackageVersion>15.2.1</PackageVersion>
+    <PackageVersion>15.3.0</PackageVersion>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageIcon>icon.png</PackageIcon>
-    <PackageReleaseNotes>Added AndThat and AndReturnsDefault to add multiple setups to the same service mock</PackageReleaseNotes>
+    <PackageReleaseNotes>Renamed ReturnsDefault(value) to Returns and apply both value and Task of value as default returns for the mock</PackageReleaseNotes>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
   <ItemGroup>
