--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -28,8 +28,8 @@
     <PackageReference Include="AutoFixture" Version="4.18.1" />
     <PackageReference Include="Moq" Version="4.20.72" />
     <PackageReference Include="Moq.AutoMock" Version="3.5.0" />
+    <PackageReference Include="Shouldly" Version="4.3.0" />
     <PackageReference Include="xunit" Version="2.9.3" />
-    <PackageReference Include="FluentAssertions" Version="7.1.0" />
     <None Include="..\README.md" Pack="true" PackagePath="\" />
     <None Include="..\TODO.txt" Pack="true" PackagePath="\" />
     <None Include="..\icon.png" Pack="true" PackagePath="\" />
