Removed AssertionFailed for cleaner test output (without prefixing Message with exception classname)

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -17,11 +17,11 @@
     <PackageProjectUrl>https://github.com/joakimsigvald/XspecT</PackageProjectUrl>
     <RepositoryUrl>https://github.com/joakimsigvald/XspecT.git</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
-    <PackageVersion>17.2.0</PackageVersion>
+    <PackageVersion>18.0.0</PackageVersion>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageIcon>icon.png</PackageIcon>
-    <PackageReleaseNotes>Provide SubjectUnderTest from TestResult, along with Result and Error, so that state-change of SUT can be verified after Act.</PackageReleaseNotes>
+    <PackageReleaseNotes>Replaced FluentAssertions with custom implementation.</PackageReleaseNotes>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
   <ItemGroup>
